synthv1 - an old-school polyphonic synthesizer
----------------------------------------------

ChangeLog


GIT HEAD

- Updated copyright headers into the New Year (2024).


0.9.33  2023-12-20  An End-of-Autumn'23 Release.

- Minor optimization to denormal avoidance on some fx's.
- Bumping into next development cycle (Qt >= 6.6)


0.9.32  2023-09-12  An End-of-Summer'23 Release.

- Preppings to next development cycle (Qt >= 6.6)


0.9.31  2023-06-06  A Spring'23 Release.

- Make sure the XCB interface is in use when instantiating the
  LV2 plugin on non-Qt hosts, allowing LV2 X11 UI embedding to
  work and show up properly.
- Prepping into the next development cycle (with Qt >= 6.5).


0.9.30  2023-03-24  An Early-Spring'23 Release.

- Restrict to existing named presets when adding new or editing
  programs; load and restore presets directly when previewing
  programs (cf. Configure... > Programs).
- NSM open and save operation failures are now replied with an
  error status (was always OK before).
- JACK client watchdog introduced for automatic reactivation and
  resilience (standalone only).
- NSM announcement reply/error messages now relegated to debug
  builds only.


0.9.29  2023-01-25  A Winter'23 Release.

- Bumping copyright headers to the brand new year.


0.9.28  2022-12-29  An End-of-Year'22 Release.

- Mitigate NSM sending lots of dirty messages on SIGTERM signal.
- Although being deprecated to use, JACK Session support hopefuly
  fixed once again.


0.9.27  2022-10-04  An Early-Autumn'22 Release.

- Fixed MIDI Controller... modeless dialog (de)instantiation.
- Custom color/style themes applies only to main widget only.
- Fixed typos and updated some old MIDI GM2 Controller names.


0.9.26  2022-06-07  An End-of-Sping'22 Release.

- Corrected an incredible mistake introduced in the last year's
  Glide/portamento protential crash fix.
- Added Qt::Svg module as required at build time.


0.9.25  2022-04-07  A Spring'22 Release.
