@@ -93,6 +93,10 @@ synthv1_lv2::synthv1_lv2 (
 	m_schedule = nullptr;
 	m_ndelta   = 0;
 
+#ifdef CONFIG_LV2_PORT_CHANGE_REQUEST
+	m_port_change_request = nullptr;
+#endif
+
 	const LV2_Options_Option *host_options = nullptr;
 
 	for (int i = 0; host_features && host_features[i]; ++i) {
@@ -164,6 +168,11 @@ synthv1_lv2::synthv1_lv2 (
 		else
 		if (::strcmp(host_feature->URI, LV2_OPTIONS__options) == 0)
 			host_options = (const LV2_Options_Option *) host_feature->data;
+	#ifdef CONFIG_LV2_PORT_CHANGE_REQUEST
+		else
+		if (::strcmp(host_feature->URI, LV2_CONTROL_INPUT_PORT_CHANGE_REQUEST_URI) == 0)
+			m_port_change_request = (LV2_ControlInputPort_Change_Request *) host_feature->data;
+	#endif
 	}
 
 	uint32_t buffer_size = 1024; // maybe some safe default?
@@ -599,6 +608,11 @@ void synthv1_lv2::updatePreset ( bool /*bDirty*/ )
 
 void synthv1_lv2::updateParam ( synthv1::ParamIndex index )
 {
+#ifdef CONFIG_LV2_PORT_CHANGE_REQUEST
+	if (port_change_request(index))
+		return;
+#endif
+
 #ifdef CONFIG_LV2_PORT_EVENT
 	if (m_schedule) {
 		synthv1_lv2_worker_message mesg;
@@ -608,14 +622,17 @@ void synthv1_lv2::updateParam ( synthv1::ParamIndex index )
 		m_schedule->schedule_work(
 			m_schedule->handle, sizeof(mesg), &mesg);
 	}
-#else
-	(void) index; // STFU dang compiler!
 #endif
 }
 
 
 void synthv1_lv2::updateParams (void)
 {
+#ifdef CONFIG_LV2_PORT_CHANGE_REQUEST
+	if (port_change_requests())
+		return;
+#endif
+
 #ifdef CONFIG_LV2_PORT_EVENT
 	if (m_schedule) {
 		synthv1_lv2_worker_message mesg;
@@ -804,6 +821,48 @@ bool synthv1_lv2::port_events (void)
 }
 
 #endif	// CONFIG_LV2_PORT_EVENT
+
+
+#ifdef CONFIG_LV2_PORT_EVENT
+
+bool synthv1_lv2::port_change_request ( synthv1::ParamIndex index )
+{
+	if (m_port_change_request == nullptr)
+		return false;
+	if (m_port_change_request->handle == nullptr)
+		return false;
+	if (m_port_change_request->request_change == nullptr)
+		return false;
+
+	return m_port_change_request->request_change(
+		m_port_change_request->handle,
+		uint32_t(ParamBase + index),
+		synthv1::paramValue(index))
+		== LV2_CONTROL_INPUT_PORT_CHANGE_SUCCESS;
+}
+
+
+bool synthv1_lv2::port_change_requests (void)
+{
+	if (m_port_change_request == nullptr)
+		return false;
+	if (m_port_change_request->handle == nullptr)
+		return false;
+	if (m_port_change_request->request_change == nullptr)
+		return false;
+
+	for (uint32_t i = 0; i < synthv1::NUM_PARAMS; ++i) {
+		synthv1::ParamIndex index = synthv1::ParamIndex(i);
+		m_port_change_request->request_change(
+			m_port_change_request->handle,
+			uint32_t(ParamBase + index),
+			synthv1::paramValue(index));
+	}
+
+	return true;
+}
+
+#endif	// CONFIG_LV2_PORT_CHANGE_REQUESTS
 
 
 //-------------------------------------------------------------------------
